--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ShappingMall_1020</string>
+    <string name="zhucexieyi"><u>注册账号</u></string>
 </resources>
